apps/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cigna-nginx
  namespace: dev

spec:
  replicas: null

  selector:
    matchLabels:
      app: cigna-nginx

  template:
    metadata:
      labels:
        app: cigna-nginx

    spec:
      containers:
      - name: cigna-nginx
        image: cignadevacr001.azurecr.io/cigna-nginx:52512f02da9a3b4e07881d69382a5fda5c9ffdcc

        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "200m"
            memory: "128Mi"
