apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cigna-ingress
  namespace: dev
spec:
  ingressClassName: nginx

  rules:  
  - http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: cigna-nginx-service
            port:
              number: 80
  tls:
   - hosts:
       - cigna.local
      secretName: cigna-tls
